# quantalogic_markdown_mcp

./: .gitignore  LICENSE  MANIFEST.in  MCP-TESTING-GUIDE.md  Makefile  README.md  debug_count.py  debug_heading.py  debug_spaces.py  demo_stateless_server.py  final_verification.py  mcp-config-alternative.json  pyproject.toml  pytest.ini  test-document.md  test-document.md.bak  test_api_compliance.py  test_comprehensive_fix.py  test_direct_header_dup.py  test_readme_verification.py  test_safe_editor.py  test_section_operations.py  test_section_ops.py  test_transactions.py
.github/workflows/: ci.yml
archive/: README-old.md  README.md
dev-scripts/: README.md  debug_heading.py  deployment_test.py  mcp_server_main.py  run_mcp_server.py  test_api_compliance.py  test_comprehensive_section_ids.py  test_direct.py  test_header_duplication.py  test_header_in_content.md  test_mcp_comprehensive.py  test_mcp_comprehensive.py.disabled  test_mcp_direct.py  test_mcp_duplication.md  test_mcp_duplication.py  test_mcp_functionality.py  test_mcp_server.py.disabled  test_mcp_validation.py.disabled  test_new_ids.md  test_safe_editor.py  test_section_operations.py  test_section_ops.py  test_stateless_simple.py  test_transactions.py
dev-scripts/backup/: test-document.md  test_comprehensive.md.bak  test_comprehensive_section_ids.py.bak  test_direct_header_dup.py.bak  test_final_verification.md.bak  test_header_duplication.py.bak  test_mcp_duplication.py.bak  test_mcp_fix.md.bak  test_new_ids.md.bak  test_operations.md.bak  test_stateless_simple.py.bak
docs/: 00-project-scalfold-spec.md  00-scratchpad.md  01-implementation-progress.md  01-implementation.md  01-problem-markdown.md  02-markdown-update.md  03-api-critique.md  04-api-summary.md  05-api-detailed-spec.md  05-final-status.md  05-progress.md  05-scratchpad.md  06-mcp-requirements.md  06-spec.md  07-progress.md  08-progress.md  08-scratchpad.md  09-implementation-plan.md  09-improve-mcp-tool.md  09-progress.md  09-scratchpad.md  11-progress.md  11-scratchpad.md  11-section-id-brainstorm.md  IMPLEMENTATION-COMPLETE.md  scratchpad.md  test-coverage-report.md
examples/: basic_usage.py  file_path_demo.py  markdown_editor_example.py
quantalogic-markdown-edit-mcp/: main.py
src/quantalogic_markdown_mcp/: __init__.py  ast_utils.py  cli.py  enhanced_mcp_server.py  mcp_server.py  mcp_server_legacy.py  parser.py  parsers.py  renderers.py  safe_editor.py  safe_editor_types.py  section_id_generator.py  stateless_processor.py  types.py
tests/: test_coverage_100.py  test_coverage_edge_cases.py  test_enhanced_mcp_server.py.disabled  test_mcp_coverage.py  test_mcp_coverage.py.disabled  test_mcp_server_comprehensive.py  test_mcp_server_comprehensive.py.disabled  test_mcp_server_interface.py.disabled  test_mcp_tools_comprehensive.py  test_parser.py  test_readme_verification.py.disabled  test_renderers.py  test_safe_editor.py  test_safe_editor_comprehensive.py  test_safe_editor_edge_cases.py  test_stateless_integration.py  test_stateless_mcp_comprehensive.py  test_stateless_processor.py
tests/test_utils/: __init__.py  stateless_test_helpers.py
tests/unit/: test_stateless_mcp_server.py.broken
